--- a/index.html
+++ b/index.html
@@ -11,120 +11,140 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
 
     <header>
-        <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
-        <nav>
-            <ul>
-                <li><a href="./" class="nav-links">Studio</a></li>
-                <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
-                <li><a href="" class="nav-links">Contacts</a></li>
+
+
+        <nav class="container main-nav">
+            <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
+            <ul class="site-nav">
+                <li class="item"><a href="./" class="nav-links">Studio</a></li>
+                <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+                <li class="item"><a href="" class="nav-links">Contacts</a></li>
             </ul>
+            <address class="address-ul">
+                <ul class="address">
+                    <li class="item"><a href="mailto:info@devstudio.com" class="nav-address">info@devstudio.com</a></li>
+                    <li class="item"><a href="tel:+110001111111" class="nav-address">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="nav-address">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="nav-address">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+
+
+
+
     </header>
+
+
 
     <main>
         <section class="hero">
-            <h1 class="hero-title">Effective Solutions
-                for Your Business</h1>
-            <button type="button" class="hero-button">Order Service</button>
+            <div class="container">
+                <h1 class="hero-title">Effective Solutions <br>
+                    for Your Business</h1>
+                <button type="button" class="hero-button">Order Service</button>
+            </div>
         </section>
+        <div class="container benefits">
+            <section>
+                <h2 class="main-subtitle">Benefits</h2>
+                <ul class="section-content">
+                    <li class="item">
+                        <h3 class="benefits-title">Strategy</h3>
+                        <p>Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.</p>
 
-        <section>
-            <h2 class="main-subtitle">Benefits</h2>
-            <ul>
-                <li>
-                    <h3 class="benefits-title">Strategy</h3>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
+                    </li>
 
-                </li>
+                    <li class="item">
+                        <h3 class="benefits-title">Punctuality</h3>
+                        <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                            time.</p>
+                    </li>
 
-                <li>
-                    <h3 class="benefits-title">Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.</p>
-                </li>
+                    <li class="item">
+                        <h3 class="benefits-title">Diligence</h3>
+                        <p>Research and confirm brands that present the strongest digital growth opportunities and
+                            minimize
+                            risk.</p>
 
-                <li>
-                    <h3 class="benefits-title">Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.</p>
+                    </li>
 
-                </li>
-
-                <li>
-                    <h3 class="benefits-title">Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
-        </section>
-
-        <section>
-            <h2 class="main-subtitle">What are we doing</h2>
-            <ul>
-                <li>
-                    <img src="./img/img1.jpg" alt="Backend development" width="360">
-                </li>
-                <li>
-                    <img src="./img/img2.jpg" alt="Mobile ads development" width="360">
-                </li>
-                <li>
-                    <img src="./img/img3.jpg" alt="Crossplatform adoptation" width="360">
-                </li>
-            </ul>
-        </section>
+                    <li class="item">
+                        <h3 class="benefits-title">Technologies</h3>
+                        <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="container doing">
+            <section>
+                <h2 class="main-subtitle">What are we doing</h2>
+                <ul class="section-content">
+                    <li class="item">
+                        <img src="./img/img1.jpg" alt="Backend development" width="360">
+                    </li>
+                    <li class="item">
+                        <img src="./img/img2.jpg" alt="Mobile ads development" width="360">
+                    </li>
+                    <li class="item">
+                        <img src="./img/img3.jpg" alt="Crossplatform adoptation" width="360">
+                    </li>
+                </ul>
+            </section>
+        </div>
 
         <section class="our-team">
-            <h2 class="main-subtitle">Our Team</h2>
+            <div class="container team">
+                <h2 class="main-subtitle">Our Team</h2>
 
-            <ul>
-                <li>
-                    <img src="./img/person1.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                <ul class="section-content team">
+                    <li class="item">
+                        <img src="./img/person1.jpg" alt="Mark Guerrero" width="264">
+                        <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
 
-                </li>
+                    </li>
 
-                <li>
-                    <img src="./img/person2.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <li class="item">
+                        <img src="./img/person2.jpg" alt="Mark Guerrero" width="264">
+                        <h3>Tom Ford</h3>
+                        <p>Frontend Developer</p>
 
-                </li>
+                    </li>
 
-                <li>
-                    <img src="./img/person3.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <li class="item">
+                        <img src="./img/person3.jpg" alt="Mark Guerrero" width="264">
+                        <h3>Camila Garcia</h3>
+                        <p>Marketing</p>
 
-                </li>
+                    </li>
 
-                <li>
-                    <img src="./img/person4.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <li class="item">
+                        <img src="./img/person4.jpg" alt="Mark Guerrero" width="264">
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
 
-                </li>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </section>
+
     </main>
 
     <footer>
-        <a href="./" class="logo">WEB<span class="logo-footer">STUDIO</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="footer container">
+            <a href="./" class="logo">WEB<span class="logo-footer">STUDIO</span></a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 
 </body>
