--- a/portfolio.html
+++ b/portfolio.html
@@ -11,83 +11,101 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
 
     <header>
-        <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
-        <nav>
-            <ul>
-                <li><a href="./" class="nav-links">Studio</a></li>
-                <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
-                <li><a href="" class="nav-links">Contacts</a></li>
+
+
+        <nav class="container main-nav">
+            <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
+            <ul class="site-nav">
+                <li class="item"><a href="./" class="nav-links">Studio</a></li>
+                <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+                <li class="item"><a href="" class="nav-links">Contacts</a></li>
             </ul>
+            <address class="address-ul">
+                <ul class="address">
+                    <li class="item"><a href="mailto:info@devstudio.com" class="nav-address">info@devstudio.com</a></li>
+                    <li class="item"><a href="tel:+110001111111" class="nav-address">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="nav-address">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="nav-address">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+
+
+
+
     </header>
 
     <main>
-        <section>
-            <h1>Work examples</h1>
-            <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
-            </ul>
 
-            <ul>
-                <li><img src="./img/banking-app.jpg" alt="Banking App" width="360">
-                    <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                    <p>App</p>
-                </li>
-                <li><img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                    <h2 class="portfolio-title">Cashless Payment</h2>
-                    <p>Marketing</p>
-                </li>
-                <li><img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
-                    <h2 class="portfolio-title">Meditaion App</h2>
-                    <p>App</p>
-                </li>
-                <li><img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
-                    <h2 class="portfolio-title">Taxi Service</h2>
-                    <p>Marketing</p>
-                </li>
-                <li><img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
-                    <h2 class="portfolio-title">Screen Illustrations</h2>
-                    <p>Design</p>
-                </li>
-                <li><img src="./img/online-cources.jpg" alt="Online Courses" width="360">
-                    <h2 class="portfolio-title">Online Courses</h2>
-                    <p>Markrting</p>
-                </li>
-                <li><img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
-                    <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                    <p>Design</p>
-                </li>
-                <li><img src="./img/organic-food.jpg" alt="Organic Food" width="360">
-                    <h2 class="portfolio-title">Organic Food</h2>
-                    <p>Web Site</p>
-                </li>
-                <li><img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                    <h2 class="portfolio-title">Fresh Coffee</h2>
-                    <p>Web Site</p>
-                </li>
-            </ul>
+        <section class="container">
+
+            <h1 class="main-subtitle">Work examples</h1>
+            <div class="portfolio">
+                <ul class="portfolio filters">
+                    <li class="item"><button type="button" class="filter-button">All</button></li>
+                    <li class="item"><button type="button" class="filter-button">Web Site</button></li>
+                    <li class="item"><button type="button" class="filter-button">App</button></li>
+                    <li class="item"><button type="button" class="filter-button">Design</button></li>
+                    <li class="item"><button type="button" class="filter-button">Marketing</button></li>
+                </ul>
+            </div>
+
+
+            <div class="list-wrap">
+                <ul class="listing-content">
+                    <li class="item"><img src="./img/banking-app.jpg" alt="Banking App" width="360">
+                        <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                        <p>App</p>
+                    </li>
+                    <li class="item"><img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                        <h2 class="portfolio-title">Cashless Payment</h2>
+                        <p>Marketing</p>
+                    </li>
+                    <li class="item"><img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
+                        <h2 class="portfolio-title">Meditaion App</h2>
+                        <p>App</p>
+                    </li>
+                    <li class="item"><img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
+                        <h2 class="portfolio-title">Taxi Service</h2>
+                        <p>Marketing</p>
+                    </li>
+                    <li class="item"><img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
+                        <h2 class="portfolio-title">Screen Illustrations</h2>
+                        <p>Design</p>
+                    </li>
+                    <li class="item"><img src="./img/online-cources.jpg" alt="Online Courses" width="360">
+                        <h2 class="portfolio-title">Online Courses</h2>
+                        <p>Markrting</p>
+                    </li>
+                    <li class="item"><img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
+                        <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                        <p>Design</p>
+                    </li>
+                    <li class="item"><img src="./img/organic-food.jpg" alt="Organic Food" width="360">
+                        <h2 class="portfolio-title">Organic Food</h2>
+                        <p>Web Site</p>
+                    </li>
+                    <li class="item"><img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                        <h2 class="portfolio-title">Fresh Coffee</h2>
+                        <p>Web Site</p>
+                    </li>
+                </ul>
+            </div>
         </section>
+
     </main>
 
     <footer>
-        <a href="./" class="logo">WEB<span class="logo-footer">STUDIO</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="footer container">
+            <a href="./" class="logo">WEB<span class="logo-footer">STUDIO</span></a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 
 </body>
