--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
     <main>
         <section class="hero">
-            <div class="container">
-                <h1 class="hero-title">Effective Solutions <br>
-                    for Your Business</h1>
+            <div>
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="hero-button">Order Service</button>
             </div>
         </section>
-        <div class="container benefits">
-            <section>
-                <h2 class="main-subtitle">Benefits</h2>
+
+        <section>
+            <div class="container benefits">
+                <h2 class="main-subtitle hidden">Benefits</h2>
                 <ul class="section-content">
                     <li class="item">
                         <h3 class="benefits-title">Strategy</h3>
@@ -82,10 +82,12 @@
                             problem-solving.</p>
                     </li>
                 </ul>
-            </section>
-        </div>
-        <div class="container doing">
-            <section>
+            </div>
+        </section>
+
+
+        <section class="container doing">
+            <div>
                 <h2 class="main-subtitle">What are we doing</h2>
                 <ul class="section-content">
                     <li class="item">
@@ -98,8 +100,9 @@
                         <img src="./img/img3.jpg" alt="Crossplatform adoptation" width="360">
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
+
 
         <section class="our-team">
             <div class="container team">
@@ -108,30 +111,35 @@
                 <ul class="section-content team">
                     <li class="item">
                         <img src="./img/person1.jpg" alt="Mark Guerrero" width="264">
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
+                        <div class="card">
+                            <h3 class="name">Mark Guerrero</h3>
 
+                            <p>Product Designer</p>
+                        </div>
                     </li>
 
                     <li class="item">
                         <img src="./img/person2.jpg" alt="Mark Guerrero" width="264">
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
-
+                        <div class="card">
+                            <h3>Tom Ford</h3>
+                            <p>Frontend Developer</p>
+                        </div>
                     </li>
 
                     <li class="item">
                         <img src="./img/person3.jpg" alt="Mark Guerrero" width="264">
-                        <h3>Camila Garcia</h3>
-                        <p>Marketing</p>
-
+                        <div class="card">
+                            <h3>Camila Garcia</h3>
+                            <p>Marketing</p>
+                        </div>
                     </li>
 
                     <li class="item">
                         <img src="./img/person4.jpg" alt="Mark Guerrero" width="264">
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
-
+                        <div class="card">
+                            <h3>Daniel Wilson</h3>
+                            <p>UI Designer</p>
+                        </div>
                     </li>
 
                 </ul>
@@ -142,8 +150,9 @@
 
     <footer>
         <div class="footer container">
-            <a href="./" class="logo">WEB<span class="logo-footer">STUDIO</span></a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <a href="./" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
+            <p class="footer">Increase the flow of customers and sales for your business with digital marketing & growth
+                solutions.</p>
         </div>
     </footer>
 
