--- a/portfolio.html
+++ b/portfolio.html
@@ -43,59 +43,79 @@
 
     <main>
 
-        <section class="container">
+        <section class="portfolio-container">
+            <div class="container">
+                <h1 class="main-subtitle hidden">Work examples</h1>
+                <div class="portfolio">
+                    <ul class="portfolio filters">
+                        <li class="item"><button type="button" class="filter-button">All</button></li>
+                        <li class="item"><button type="button" class="filter-button">Web Site</button></li>
+                        <li class="item"><button type="button" class="filter-button">App</button></li>
+                        <li class="item"><button type="button" class="filter-button">Design</button></li>
+                        <li class="item"><button type="button" class="filter-button">Marketing</button></li>
+                    </ul>
+                </div>
 
-            <h1 class="main-subtitle">Work examples</h1>
-            <div class="portfolio">
-                <ul class="portfolio filters">
-                    <li class="item"><button type="button" class="filter-button">All</button></li>
-                    <li class="item"><button type="button" class="filter-button">Web Site</button></li>
-                    <li class="item"><button type="button" class="filter-button">App</button></li>
-                    <li class="item"><button type="button" class="filter-button">Design</button></li>
-                    <li class="item"><button type="button" class="filter-button">Marketing</button></li>
-                </ul>
-            </div>
 
-
-            <div class="list-wrap">
-                <ul class="listing-content">
-                    <li class="item"><img src="./img/banking-app.jpg" alt="Banking App" width="360">
-                        <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                        <p>App</p>
-                    </li>
-                    <li class="item"><img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                        <h2 class="portfolio-title">Cashless Payment</h2>
-                        <p>Marketing</p>
-                    </li>
-                    <li class="item"><img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
-                        <h2 class="portfolio-title">Meditaion App</h2>
-                        <p>App</p>
-                    </li>
-                    <li class="item"><img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
-                        <h2 class="portfolio-title">Taxi Service</h2>
-                        <p>Marketing</p>
-                    </li>
-                    <li class="item"><img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
-                        <h2 class="portfolio-title">Screen Illustrations</h2>
-                        <p>Design</p>
-                    </li>
-                    <li class="item"><img src="./img/online-cources.jpg" alt="Online Courses" width="360">
-                        <h2 class="portfolio-title">Online Courses</h2>
-                        <p>Markrting</p>
-                    </li>
-                    <li class="item"><img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
-                        <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                        <p>Design</p>
-                    </li>
-                    <li class="item"><img src="./img/organic-food.jpg" alt="Organic Food" width="360">
-                        <h2 class="portfolio-title">Organic Food</h2>
-                        <p>Web Site</p>
-                    </li>
-                    <li class="item"><img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                        <h2 class="portfolio-title">Fresh Coffee</h2>
-                        <p>Web Site</p>
-                    </li>
-                </ul>
+                <div class="list-wrap">
+                    <ul class="listing-content">
+                        <li class="item"><img src="./img/banking-app.jpg" alt="Banking App" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Cashless Payment</h2>
+                                <p>Marketing</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Meditaion App</h2>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Taxi Service</h2>
+                                <p>Marketing</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/screen-illustration.jpg" alt="Screen Illustrations"
+                                width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Screen Illustrations</h2>
+                                <p>Design</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/online-cources.jpg" alt="Online Courses" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Online Courses</h2>
+                                <p>Markrting</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                                <p>Design</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/organic-food.jpg" alt="Organic Food" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Organic Food</h2>
+                                <p>Web Site</p>
+                            </div>
+                        </li>
+                        <li class="item"><img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                            <div class="portfolio-card">
+                                <h2 class="portfolio-title">Fresh Coffee</h2>
+                                <p>Web Site</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
 
@@ -103,8 +123,9 @@
 
     <footer>
         <div class="footer container">
-            <a href="./" class="logo">WEB<span class="logo-footer">STUDIO</span></a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <a href="./" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
+            <p class="footer">Increase the flow of customers and sales for your business with digital marketing & growth
+                solutions.</p>
         </div>
     </footer>
 
