--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <section>
             <div class="container benefits">
-                <h2 class="main-subtitle hidden">Benefits</h2>
+                <h2 class="visually-hidden">Benefits</h2>
                 <ul class="section-content">
                     <li class="item">
                         <h3 class="benefits-title">Strategy</h3>
@@ -119,25 +119,25 @@
                     </li>
 
                     <li class="item">
-                        <img src="./img/person2.jpg" alt="Mark Guerrero" width="264">
+                        <img src="./img/person2.jpg" alt="Tom Ford" width="264">
                         <div class="card">
-                            <h3>Tom Ford</h3>
+                            <h3 class="name">Tom Ford</h3>
                             <p>Frontend Developer</p>
                         </div>
                     </li>
 
                     <li class="item">
-                        <img src="./img/person3.jpg" alt="Mark Guerrero" width="264">
+                        <img src="./img/person3.jpg" alt="Camila Garcia" width="264">
                         <div class="card">
-                            <h3>Camila Garcia</h3>
+                            <h3 class="name">Camila Garcia</h3>
                             <p>Marketing</p>
                         </div>
                     </li>
 
                     <li class="item">
-                        <img src="./img/person4.jpg" alt="Mark Guerrero" width="264">
+                        <img src="./img/person4.jpg" alt="Daniel Wilson" width="264">
                         <div class="card">
-                            <h3>Daniel Wilson</h3>
+                            <h3 class="name">Daniel Wilson</h3>
                             <p>UI Designer</p>
                         </div>
                     </li>
