--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 
         <section class="portfolio-container">
             <div class="container">
-                <h1 class="main-subtitle hidden">Work examples</h1>
+                <h1 class="visually-hidden">Work examples</h1>
                 <div class="portfolio">
                     <ul class="portfolio filters">
                         <li class="item"><button type="button" class="filter-button">All</button></li>
