--- a/index — backup.html
+++ b/index — backup.html
@@ -55,37 +55,23 @@
             <div class="container benefits">
                 <h2 class="visually-hidden">Benefits</h2>
                 <ul class="section-content">
-                    <li class="item">
-                        <div class="benefit-icon">
-                            <svg class="icon">
-                                <use href="./img/icons.svg#icon-antenna"></use>
-                            </svg>
-                        </div>
+                    <li class="item benefit-icon antenna-icon">
+                        <svg>
+                            <use href="./img/icons.svg#icon-antenna"></use>
+                        </svg>
                         <h3 class="benefits-title">Strategy</h3>
                         <p>Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
 
                     </li>
 
-                    <li class="item">
-                        <div class="benefit-icon">
-                            <svg class="icon">
-                                <use href="./img/icons.svg#icon-clock"></use>
-                            </svg>
-                        </div>
-
+                    <li class="item benefit-icon clock-icon">
                         <h3 class=" benefits-title">Punctuality</h3>
                         <p>Bring the key message to the brand's audience for the best price within the shortest possible
                             time.</p>
                     </li>
 
-                    <li class="item">
-                        <div class="benefit-icon">
-                            <svg class="icon">
-                                <use href="./img/icons.svg#icon-diagram"></use>
-                            </svg>
-                        </div>
-
+                    <li class="item benefit-icon diagram-icon">
                         <h3 class=" benefits-title">Diligence</h3>
                         <p>Research and confirm brands that present the strongest digital growth opportunities and
                             minimize
@@ -93,13 +79,7 @@
 
                     </li>
 
-                    <li class="item">
-                        <div class="benefit-icon">
-                            <svg class="icon">
-                                <use href="./img/icons.svg#icon-astronaut"></use>
-                            </svg>
-                        </div>
-
+                    <li class="item benefit-icon astronaut-icon">
                         <h3 class=" benefits-title">Technologies</h3>
                         <p>Design practice focused on digital experiences. We bring forth a deep passion for
                             problem-solving.</p>
