hero background, gradient

--- a/index.html
+++ b/index.html
@@ -173,6 +173,45 @@
             </div>
         </section>
 
+        <section class="customers">
+            <div class="container">
+                <h2 class="main-subtitle">Customers</h2>
+                <ul class="customer-list">
+                    <li>
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use></use>
+                        </svg>
+                    </li>
+                </ul>
+
+            </div>
+        </section>
+
     </main>
 
     <footer>
