customers section icons

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="benefits">
             <div class="container benefits">
                 <h2 class="visually-hidden">Benefits</h2>
                 <ul class="section-content">
@@ -177,35 +177,47 @@
             <div class="container">
                 <h2 class="main-subtitle">Customers</h2>
                 <ul class="customer-list">
-                    <li>
-                        <svg>
-                            <use></use>
-                        </svg>
+                    <li class="item">
+                        <div class="icon">
+                            <svg>
+                                <use href="./img/icons.svg#icon-Logo"></use>
+                            </svg>
+                        </div>
                     </li>
-                    <li>
-                        <svg>
-                            <use></use>
-                        </svg>
+                    <li class="item">
+                        <div class="icon">
+                            <svg>
+                                <use href="./img/icons.svg#icon-Logo2"></use>
+                            </svg>
+                        </div>
                     </li>
-                    <li>
-                        <svg>
-                            <use></use>
-                        </svg>
+                    <li class="item">
+                        <div class="icon">
+                            <svg>
+                                <use href="./img/icons.svg#icon-Logo3"></use>
+                            </svg>
+                        </div>
                     </li>
-                    <li>
-                        <svg>
-                            <use></use>
-                        </svg>
+                    <li class="item">
+                        <div class="icon">
+                            <svg>
+                                <use href="./img/icons.svg#icon-Logo4"></use>
+                            </svg>
+                        </div>
                     </li>
-                    <li>
-                        <svg>
-                            <use></use>
-                        </svg>
+                    <li class="item">
+                        <div class="icon">
+                            <svg>
+                                <use href="./img/icons.svg#icon-Logo5"></use>
+                            </svg>
+                        </div>
                     </li>
-                    <li>
-                        <svg>
-                            <use></use>
-                        </svg>
+                    <li class="item">
+                        <div class="icon">
+                            <svg>
+                                <use href="./img/icons.svg#icon-Logo6"></use>
+                            </svg>
+                        </div>
                     </li>
                 </ul>
 
