social networks icons added

--- a/index.html
+++ b/index.html
@@ -139,6 +139,46 @@
                             <h3 class="name">Mark Guerrero</h3>
 
                             <p>Product Designer</p>
+                            <div class="social-networks">
+                                <ul class="networks-list">
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
@@ -148,6 +188,46 @@
 
                             <h3 class="name">Tom Ford</h3>
                             <p>Frontend Developer</p>
+                            <div class="social-networks">
+                                <ul class="networks-list">
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
@@ -157,6 +237,46 @@
 
                             <h3 class="name">Camila Garcia</h3>
                             <p>Marketing</p>
+                            <div class="social-networks">
+                                <ul class="networks-list">
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
@@ -166,6 +286,46 @@
 
                             <h3 class="name">Daniel Wilson</h3>
                             <p>UI Designer</p>
+                            <div class="social-networks">
+                                <ul class="networks-list">
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#">
+                                            <div class="network-svg">
+                                                <svg class="network-item">
+                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
