section doing / div container changed

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </section>
 
 
-        <section class="container doing">
-            <div>
+        <section class="doing">
+            <div class="container">
                 <h2 class="main-subtitle">What are we doing</h2>
                 <ul class="section-content">
                     <li class="item">
