footer icons media links added

--- a/index.html
+++ b/index.html
@@ -388,9 +388,38 @@
 
     <footer>
         <div class="footer container">
-            <a href="./" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
-            <p class="footer">Increase the flow of customers and sales for your business with digital marketing & growth
-                solutions.</p>
+            <div class="footer">
+                <a href="./" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
+                <p class="footer">Increase the flow of customers and sales for your business with digital marketing &
+                    growth
+                    solutions.</p>
+            </div>
+
+            <div class="footer-media">
+                <h3 class="media-logo">Social media</h3>
+                <ul class="media-links">
+                    <li class="item media">
+                        <svg class="network-item">
+                            <use href="./img/icons.svg#icon-instagram-blue"></use>
+                        </svg>
+                    </li>
+                    <li class="item media">
+                        <svg class="network-item">
+                            <use href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </li>
+                    <li class="item media">
+                        <svg class="network-item">
+                            <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </li>
+                    <li class="item media">
+                        <svg class="network-item">
+                            <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 
