footer media icons wrapped in link

--- a/index.html
+++ b/index.html
@@ -398,25 +398,33 @@
             <div class="footer-media">
                 <h3 class="media-logo">Social media</h3>
                 <ul class="media-links">
-                    <li class="item media">
-                        <svg class="network-item">
-                            <use href="./img/icons.svg#icon-instagram-blue"></use>
-                        </svg>
+                    <li class="item"><a href="">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                </svg></div>
+                        </a>
+
                     </li>
-                    <li class="item media">
-                        <svg class="network-item">
-                            <use href="./img/icons.svg#icon-twitter"></use>
-                        </svg>
+                    <li class="item"><a href="">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                </svg></div>
+                        </a>
+
                     </li>
-                    <li class="item media">
-                        <svg class="network-item">
-                            <use href="./img/icons.svg#icon-facebook"></use>
-                        </svg>
+                    <li class="item"><a href="">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                </svg></div>
+                        </a>
+
                     </li>
-                    <li class="item media">
-                        <svg class="network-item">
-                            <use href="./img/icons.svg#icon-linkedin"></use>
-                        </svg>
+                    <li class="item"><a href="">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                </svg></div>
+                        </a>
+
                     </li>
                 </ul>
             </div>
