svg icons index page finished

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li class="item">
                         <div class="benefit-icon">
                             <svg class="icon">
-                                <use href="./img/icons.svg#icon-antenna"></use>
+                                <use href="./img/icons.svg#antenna"></use>
                             </svg>
                         </div>
                         <h3 class="benefits-title">Strategy</h3>
@@ -70,7 +70,7 @@
                     <li class="item">
                         <div class="benefit-icon">
                             <svg class="icon">
-                                <use href="./img/icons.svg#icon-clock"></use>
+                                <use href="./img/icons.svg#clock"></use>
                             </svg>
                         </div>
 
@@ -82,7 +82,7 @@
                     <li class="item">
                         <div class="benefit-icon">
                             <svg class="icon">
-                                <use href="./img/icons.svg#icon-diagram"></use>
+                                <use href="./img/icons.svg#diagram"></use>
                             </svg>
                         </div>
 
@@ -96,7 +96,7 @@
                     <li class="item">
                         <div class="benefit-icon">
                             <svg class="icon">
-                                <use href="./img/icons.svg#icon-astronaut"></use>
+                                <use href="./img/icons.svg#astronaut"></use>
                             </svg>
                         </div>
 
@@ -145,7 +145,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                    <use href="./img/icons.svg#instagram"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -154,7 +154,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                    <use href="./img/icons.svg#twitter"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -163,7 +163,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                    <use href="./img/icons.svg#facebook"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -172,7 +172,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                    <use href="./img/icons.svg#linkedin"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -194,7 +194,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                    <use href="./img/icons.svg#instagram"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -203,7 +203,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                    <use href="./img/icons.svg#twitter"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -212,7 +212,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                    <use href="./img/icons.svg#facebook"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -221,7 +221,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                    <use href="./img/icons.svg#linkedin"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -243,7 +243,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                    <use href="./img/icons.svg#instagram"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -252,7 +252,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                    <use href="./img/icons.svg#twitter"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -261,7 +261,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                    <use href="./img/icons.svg#facebook"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -270,7 +270,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                    <use href="./img/icons.svg#linkedin"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -292,7 +292,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                                    <use href="./img/icons.svg#instagram"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -301,7 +301,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                                    <use href="./img/icons.svg#twitter"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -310,7 +310,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                                    <use href="./img/icons.svg#facebook"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -319,7 +319,7 @@
                                         <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
-                                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                                    <use href="./img/icons.svg#linkedin"></use>
                                                 </svg>
                                             </div>
                                         </a>
@@ -338,44 +338,44 @@
                 <h2 class="main-subtitle">Customers</h2>
                 <ul class="customer-list">
                     <li class="item">
-                        <div class="icon">
-                            <svg>
-                                <use href="./img/icons.svg#icon-Logo"></use>
+                        <div class="icon-svg">
+                            <svg class="icon">
+                                <use href="./img/icons.svg#Logo"></use>
                             </svg>
                         </div>
                     </li>
                     <li class="item">
-                        <div class="icon">
-                            <svg>
-                                <use href="./img/icons.svg#icon-Logo2"></use>
+                        <div class="icon-svg">
+                            <svg class="icon">
+                                <use href="./img/icons.svg#Logo2"></use>
                             </svg>
                         </div>
                     </li>
                     <li class="item">
-                        <div class="icon">
-                            <svg>
-                                <use href="./img/icons.svg#icon-Logo3"></use>
+                        <div class="icon-svg">
+                            <svg class="icon">
+                                <use href="./img/icons.svg#Logo3"></use>
                             </svg>
                         </div>
                     </li>
                     <li class="item">
-                        <div class="icon">
-                            <svg>
-                                <use href="./img/icons.svg#icon-Logo4"></use>
+                        <div class="icon-svg">
+                            <svg class="icon">
+                                <use href="./img/icons.svg#Logo4"></use>
                             </svg>
                         </div>
                     </li>
                     <li class="item">
-                        <div class="icon">
-                            <svg>
-                                <use href="./img/icons.svg#icon-Logo5"></use>
+                        <div class="icon-svg">
+                            <svg class="icon">
+                                <use href="./img/icons.svg#Logo5"></use>
                             </svg>
                         </div>
                     </li>
                     <li class="item">
-                        <div class="icon">
-                            <svg>
-                                <use href="./img/icons.svg#icon-Logo6"></use>
+                        <div class="icon-svg">
+                            <svg class="icon">
+                                <use href="./img/icons.svg#Logo6"></use>
                             </svg>
                         </div>
                     </li>
@@ -398,30 +398,30 @@
             <div class="footer-media">
                 <h3 class="media-logo">Social media</h3>
                 <ul class="media-links">
-                    <li class="item"><a href="">
+                    <li class="item"><a href="#" alt="Instagram" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#icon-instagram-blue"></use>
+                                    <use href="./img/icons.svg#instagram"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="">
+                    <li class="item"><a href="#" alt="Twitter" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#icon-twitter"></use>
+                                    <use href="./img/icons.svg#twitter"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="">
+                    <li class="item"><a href="#" alt="Facebook" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#icon-facebook"></use>
+                                    <use href="./img/icons.svg#facebook"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="">
+                    <li class="item"><a href="#" alt="LinkedIn" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#icon-linkedin"></use>
+                                    <use href="./img/icons.svg#linkedin"></use>
                                 </svg></div>
                         </a>
 
