--- a/portfolio.html
+++ b/portfolio.html
@@ -123,9 +123,46 @@
 
     <footer>
         <div class="footer container">
-            <a href="./" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
-            <p class="footer">Increase the flow of customers and sales for your business with digital marketing & growth
-                solutions.</p>
+            <div class="footer">
+                <a href="./" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
+                <p class="footer">Increase the flow of customers and sales for your business with digital marketing &
+                    growth
+                    solutions.</p>
+            </div>
+
+            <div class="footer-media">
+                <h3 class="media-logo">Social media</h3>
+                <ul class="media-links">
+                    <li class="item"><a href="#" alt="Instagram" rel="noopener norefferer nofollow">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#instagram"></use>
+                                </svg></div>
+                        </a>
+
+                    </li>
+                    <li class="item"><a href="#" alt="Twitter" rel="noopener norefferer nofollow">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#twitter"></use>
+                                </svg></div>
+                        </a>
+
+                    </li>
+                    <li class="item"><a href="#" alt="Facebook" rel="noopener norefferer nofollow">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#facebook"></use>
+                                </svg></div>
+                        </a>
+
+                    </li>
+                    <li class="item"><a href="#" alt="LinkedIn" rel="noopener norefferer nofollow">
+                            <div class="icon-wrap"><svg class="network-item">
+                                    <use href="./img/icons.svg#linkedin"></use>
+                                </svg></div>
+                        </a>
+
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 
