--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                 <div class="list-wrap">
                     <ul class="listing-content">
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/banking-app.jpg" alt="Banking App" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Banking App Interface Concept</h2>
@@ -69,7 +69,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Cashless Payment</h2>
@@ -78,7 +78,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Meditaion App</h2>
@@ -87,7 +87,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Taxi Service</h2>
@@ -96,7 +96,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Screen Illustrations</h2>
@@ -105,7 +105,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/online-cources.jpg" alt="Online Courses" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Online Courses</h2>
@@ -114,7 +114,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Instagram Stories Concept</h2>
@@ -123,7 +123,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/organic-food.jpg" alt="Organic Food" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Organic Food</h2>
@@ -132,7 +132,7 @@
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card">
+                            <div class="card project">
                                 <img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
                                 <div class="portfolio-descr">
                                     <h2 class="portfolio-title">Fresh Coffee</h2>
